Add alt text for images

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -20,61 +20,61 @@
             <a href="order.html">&bull; Order a Cake</a>
             <a href="gallery.html">&bull; The Gallery</a>
           </div>
-          <img class="cake-review" src="../images/cake_review.png">
+          <img class="cake-review" src="../images/cake_review.png" alt="Review from a satisfied customer saying 'Beautiful and delicious cakes'">
         </div>
         <i class="close fas fa-times"></i>
         <a href="landing.html">
-          <h2 class="logo"><img src="../images/cake_logo.png"></h2>
+          <h2 class="logo"><img src="../images/cake_logo.png" alt="The Custome Cakery logo"></h2>
         </a>
       </div>
       <h4>CHECK OUT OUR CAKES!</h4>
       <div class="gallery-wrapper">
         <div class="gallery-item">
-          <img src="../images/01.jpg">
+          <img src="../images/01.jpg" alt="Vanilla cupcake with chocolate icing">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/02.jpg">
+          <img src="../images/02.jpg" alt="Tiramissu cake slice with chocolate powder on top">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/03.jpg">
+          <img src="../images/03.jpg" alt="Hand holding a vanilla cupcake with purple icing and a candle">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/04.jpg">
+          <img src="../images/04.jpg" alt="Slice of moist chocolate cake with chocolate icing">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/05.jpg" >
+          <img src="../images/05.jpg" alt="Carrot cupcake with strawberry icing and cereal crumbles">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/06.jpg">
+          <img src="../images/06.jpg" alt="White cake with purple drip decoration and a unicorn topper">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/07.jpg">
+          <img src="../images/07.jpg" alt="Two layer angel food cake with whipped cream and raspberries">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/08.jpg">
+          <img src="../images/08.jpg" alt="White cake with cactus decorations and sparkler candle">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/09.jpg">
+          <img src="../images/09.jpg" alt="Funfetti cupcake with rainbow decoration">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/10.jpg">
+          <img src="../images/10.jpg" alt="Butterscotch cupcake with cream cheese icing and chocolate curls">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/11.jpg">
+          <img src="../images/11.jpg" alt="Chocolate drip cake with chocolate cream swirls">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
         <div class="gallery-item">
-          <img src="../images/12.jpg">
+          <img src="../images/12.jpg" alt="Dark chocoloate cupcake with orange icing and chocolate swirls">
           <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
         </div>
       </div>
