--- a/public/order.html
+++ b/public/order.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -32,11 +32,11 @@
             <a href="order.html">&bull; Order a Cake</a>
             <a href="gallery.html">&bull; The Gallery</a>
           </div>
-          <img class="cake-review" src="../images/cake_review.png">
+          <img class="cake-review" src="../images/cake_review.png" alt="Review from a satisfied customer saying 'Beautiful and delicious cakes'">
         </div>
         <i class="close fas fa-times"></i>
         <a href="landing.html">
-          <h2 class="logo"><img src="../images/cake_logo.png"></h2>
+          <h2 class="logo"><img src="../images/cake_logo.png" alt="The Custome Cakery logo"></h2>
         </a>
       </div>
       <form>
