--- a/public/landing.html
+++ b/public/landing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -20,17 +20,17 @@
             <a href="order.html">&bull; Order a Cake</a>
             <a href="gallery.html">&bull; The Gallery</a>
           </div>
-          <img class="cake-review" src="../images/cake_review.png">
+          <img class="cake-review" src="../images/cake_review.png" alt="Review from a satisfied customer saying 'Beautiful and delicious cakes'">
         </div>
-        <i class="close fas fa-times"></i>     
+        <i class="close fas fa-times"></i>
         <a href="landing.html">
-          <h2 class="logo"><img src="../images/cake_logo.png"></h2>
+          <h2 class="logo"><img src="../images/cake_logo.png" alt="The Custome Cakery logo"></h2>
         </a>
       </div>
       <div class="flex">
         <div>
-          <img class="medium-image landing-image" src="../images/sprinkle_cake.jpeg">
-          <div class="margin-top--small medium-image-text"><img src="../images/cake_text.png"></div>
+          <img class="medium-image landing-image" src="../images/sprinkle_cake.jpeg" alt="Close up of a purple cake with colorful sprinkles">
+          <div class="margin-top--small medium-image-text"><img src="../images/cake_text.png" alt="Banner saying 'click the cake above to see more of our delicious cakes'"></div>
         </div>
         <div class="description-text">
           <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
@@ -40,7 +40,7 @@
           <div>Click <a href="order.html">here</a> to order a cake today, or check out our awesome <a href="gallery.html">gallery!</a></div>
           <p>WE ALSO MAKE CUPCAKES!!!</p>
           <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
-        </div>       
+        </div>
       </div>
     </div>
     <div class="footer">
