Add alt/title text to social media icons in footer

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -83,10 +83,10 @@
     <div class="footer">
       <div>Contact Us</div>
       <div>
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fas fa-envelope-open"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
+        <a href=""><i class="fab fa-instagram" title="Link to our instagram"></i></a>
+        <a href=""><i class="fab fa-facebook-square" title="Link to our facebook"></i></a>
+        <a href=""><i class="fas fa-envelope-open" title="Link to our email"></i></a>
+        <a href=""><i class="fab fa-twitter" title="Link to our twitter"></i></a>
       </div>
     </div>
     <script type="text/javascript" src="../main.js"></script>
