Add form labels and make nav tabbable

--- a/public/landing.html
+++ b/public/landing.html
@@ -12,8 +12,8 @@
   <body id="landing">
     <div class="content">
       <div class="header flex">
-        <i class="hamburger fas fa-bars"></i>
-        <div class="menu">
+        <i tabindex="0" class="hamburger fas fa-bars"></i>
+        <nav class="menu">
           <div class="links">
             <h5>MENU</h5>
             <a href="landing.html">&bull; Home</a>
@@ -21,7 +21,7 @@
             <a href="gallery.html">&bull; The Gallery</a>
           </div>
           <img class="cake-review" src="../images/cake_review.png" alt="Review from a satisfied customer saying 'Beautiful and delicious cakes'">
-        </div>
+        </nav>
         <i class="close fas fa-times"></i>
         <a href="landing.html">
           <h2 class="logo"><img src="../images/cake_logo.png" alt="The Custome Cakery logo"></h2>
