Fix form label typo

--- a/public/order.html
+++ b/public/order.html
@@ -51,7 +51,7 @@
         <h2>Desired Cake</h2>
         <input id="whole-cake" type="radio" name="cake">
         <label for="whole-cake">Whole Cake</label>
-        <input id-"half-dozen" type="radio" name="cake">
+        <input id="half-dozen" type="radio" name="cake">
         <label for="half-dozen">1/2 Dozen Cupcakes</label>
         <input id="one-dozen" type="radio" name="cake">
         <label for="one-dozen">1 Dozen Cupcakes</label>
