Add modal form label

--- a/public/order.html
+++ b/public/order.html
@@ -13,9 +13,9 @@
     <div class="modal">
       <i class="modal-close fas fa-times"></i>
       <div class="modal-content">
-       <h3>Want to Save 10% on Your First Cake Purchase?! Enter your email here, and join the cake club!</h3>
+       <label for="email-signup">Want to Save 10% on Your First Cake Purchase?! Enter your email here, and join the cake club!</label>
         <div class="input">
-          <input class="modal-email-field" type="text" >
+          <input id="email-signup" class="modal-email-field" type="text" >
         </div>
         <div>
           <button class="margin-top--small modal-button">JOIN THE CAKE CLUB!</button>
