--- a/public/landing.html
+++ b/public/landing.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Custom Cakery</title>
     <link rel="stylesheet" href="../styles.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Josefin+Slab&display=swap" rel="stylesheet">
@@ -28,11 +28,11 @@
         </a>
       </div>
       <div class="flex">
-        <div>
+        <div class="box">
           <img class="medium-image landing-image" src="../images/sprinkle_cake.jpeg" alt="Close up of a purple cake with colorful sprinkles">
           <div class="margin-top--small medium-image-text"><img src="../images/cake_text.png" alt="Banner saying 'click the cake above to see more of our delicious cakes'"></div>
         </div>
-        <div class="description-text">
+        <div class="box description-text">
           <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
           <p>
             Welcome to The Custom Cakery! We are an entirely custom cake making business, and would love to take on any cake challenge! Our cakes are inspired by many things, including: fresh flowers, winter mountain scenes, a long walk on the beach, spending time with our friends and family, modern art galleries, heavy metal concerts, scuba diving in the carribbean, the smell of rain, our favorite novels, and of course YOU! We would love to create that custom cake of your dreams, just for fun, or for a special event and / or person in your life! These events may include: birthdays, weddings, funerals, get togethers, reunions, band practice, halloween, national chocolate cake day, births, your cat's birthday, quitting a job, apologizing to a friend or acquaintance and more!!!!!
